argocd-app/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  rules:
  - host: argocd-lab.dev
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: argocd-server
              port:
                number: 443
  - host: argocd.lab.myddns.me
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: argocd-server
              port:
                number: 443
